--- a/Project.toml
+++ b/Project.toml
@@ -3,26 +3,52 @@ uuid = "de008ff0-c357-11e8-3329-7fe746fe836e"
 version = "0.2.1"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Compose = "a81c6b42-2e10-5240-aca2-a61377ecd94b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DiscreteValueIteration = "4b033969-44f6-5439-a48b-c11fa3648068"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+FiniteHorizonPOMDPs = "8a13bbfe-798e-11e9-2f1c-eba9ee5ef093"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+POMDPGifs = "7f35509c-0cb9-11e9-0708-2928828cdbb7"
 POMDPTools = "7588e00f-9cae-40de-98dc-e0c70c48cdd7"
+POMDPXFiles = "c6f6ee83-58c6-5336-a19f-2c76817e1af6"
 POMDPs = "a93abf59-7444-517b-a68a-c42f96afdd7d"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 ParticleFilters = "c8b314e2-9260-5cf8-ae76-3be7461ca6d0"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SARSOP = "cef570c6-3a94-5604-96b7-1a5e143043f2"
+Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
+CSV = "0.10.15"
+Cairo = "1.1.0"
 Combinatorics = "1"
 Compose = "0.7, 0.8, 0.9"
+DataFrames = "1.7.0"
 DiscreteValueIteration = "0.4.4"
+Distributions = "0.25.113"
+FiniteHorizonPOMDPs = "0.4.1"
+MAT = "0.10.7"
+POMDPGifs = "0.1.3"
 POMDPTools = "0.1, 1"
+POMDPXFiles = "0.3.0"
 POMDPs = "0.9, 1"
 Parameters = "0.12"
 ParticleFilters = "0.5"
+Plots = "1.40.9"
+Revise = "3.6.3"
+SARSOP = "0.5.8"
+Serialization = "1.11.0"
 StaticArrays = "1"
+Statistics = "1.11.1"
 julia = "1"
 
 [extras]
